...
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.Center,
        ) {
          OutlinedTextField(
              value = email,
              onValueChange = { email = it },
              modifier = Modifier.testTag("emailField"),
              label = { Text("Email") },
              placeholder = { Text("example@example.com") })

          Spacer(Modifier.padding(10.dp))

          OutlinedTextField(
              value = password,
              onValueChange = { password = it },
              modifier = Modifier.testTag("passwordField"),
              label = { Text("Password") },
              placeholder = { Text("password") },
              visualTransformation = PasswordVisualTransformation())

          Spacer(Modifier.padding(10.dp))

...
                              Toast.LENGTH_SHORT,
                          )
                          .show()
                      methodChosen.value = false
                    })
              }) {
                Text("Log in")
              }
        }
      }
}

